--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                         <div class="cropper border border-3 border-light shadow my-4 mx-auto">
                             <img src="assets/images/cowo.png" alt="bg" onclick="modalFoto(this)">
                         </div>
-                        <h1 class="font-estetik" style="font-size: 3rem;">Fajri Siapa</h1>
+                        <h1 class="font-estetik" style="font-size: 3rem;">Muh. Fajri Naktsir</h1>
                         <h5 class="mt-3 mb-0">Putra</h5>
-                        <p class="mb-0">Bapak ... & Ibu ...</p>
+                        <p class="mb-0">Bapak Muh. Naktsir & Ibu Muhtadirah, S.Pd.I, MA.</p>
                     </div>
 
                     <h1 class="font-estetik my-4" style="font-size: 4rem;">&</h1>
@@ -122,9 +122,9 @@
                         <div class="cropper border border-3 border-light shadow my-4 mx-auto">
                             <img src="assets/images/cewe.png" alt="bg" onclick="modalFoto(this)">
                         </div>
-                        <h1 class="font-estetik" style="font-size: 3rem;">Isma Siapa</h1>
+                        <h1 class="font-estetik" style="font-size: 3rem;">Ismayani, S.Pd.</h1>
                         <h5 class="mt-3 mb-0">Putri</h5>
-                        <p class="mb-0">Bapak ... & Ibu ...</p>
+                        <p class="mb-0">Bapak Muh. Agus & Ibu Hj. Marliati</p>
                     </div>
                 </div>
             </div>
