--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         </div>
                         <h1 class="font-estetik" style="font-size: 3rem;">Muh. Fajri Naktsir</h1>
                         <h5 class="mt-3 mb-0">Putra</h5>
-                        <p class="mb-0">Bapak Muh. Naktsir & Ibu Muhtadirah, S.Pd.I, MA.</p>
+                        <p class="mb-0">Bapak Muh. Naktsir & Ibu Muhtadirah Thaiyeb, S.Pd.I, MA.</p>
                     </div>
 
                     <h1 class="font-estetik my-4" style="font-size: 4rem;">&</h1>
