--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="cropper border border-3 border-light shadow my-4 mx-auto">
                             <img src="assets/images/cowo.png" alt="bg" onclick="modalFoto(this)">
                         </div>
-                        <h1 class="font-estetik" style="font-size: 3rem;">Muh. Fajri Naktsir</h1>
+                        <h1 class="font-estetik" style="font-size: 3rem;">Muhammad Fajri Naktsir</h1>
                         <h5 class="mt-3 mb-0">Putra</h5>
                         <p class="mb-0">Bapak Muh. Naktsir & Ibu Muhtadirah Thaiyeb, S.Pd.I, MA.</p>
                     </div>
